<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, RenRenActivity!</string>
    <string name="app_name">EMBA社交</string>
    <string name="template_user_agent">%1$s/%2$s (Linux; Android)</string>
    <string name="no_dents">没有发现消息;</string>
    <string name="title">标题</string>
    <string name="status">想什么呢？</string>
    <string name="update">发送</string>
    <string name="upload">上传</string>
    <string name="enable_update_location">发送位置信息？</string>
    <string name="confirm">确认</string>
    <string name="confirm_fav">添加到收藏</string>
    <string name="confirm_faved">已收藏</string>
    <string name="error_fav">添加到收藏出错</string>
    <string name="confirm_unfav">从收藏中移除</string>
    <string name="error_unfav">从收藏中移除出错</string>
    <string name="confirm_repeat">信息已回推</string>
    <string name="error_repeat">回推消息出错，禁用新模式</string>
    <string name="confirm_sub">订阅</string>
    <string name="error_sub">订阅出错</string>
    <string name="confirm_unsub">取消订阅</string>
    <string name="error_unsub">取消订阅出错</string>
    <string name="confirm_block">阻止</string>
    <string name="error_block">阻止出错</string>
    <string name="confirm_unblock">Unblocked</string>
    <string name="error_unblock">Error unblocking %s</string>
    <string name="confirm_join">加入</string>
    <string name="error_join">加入群组出错</string>
    <string name="confirm_leave">离开</string>
    <string name="error_leave">离开群组出错</string>
    <string name="error_generic">抱歉，出现未知错误</string>
    <string name="error_generic_detail">抱歉，出现以下未知错误\n%s</string>
    <string name="error_title_no_network">没有网络链接</string>
    <string name="error_no_network">由于网络链接问题，无法发布消息</string>
    <string name="error_no_attachment_supported">StatusNet 服务正常但是不支持附件</string>
    <string name="error_no_dents_from">获取回复和收藏时出错</string>
    <string name="warning_text_too_long">That\'s too long. Max notice size is %s chars. Would you continue anyhow?</string>
    <string name="msg_logout">确定注销此账号？</string>
    <string name="warning_attachment_too_long">Attachment is too big. Max attachement size is %s bytes.</string>
    <string name="msg_unauth">There is a problem with stored credentials. Please reauthorize mustard! Proceed?</string>
    <string name="msg_confirm_repeat">Repeat this notice?</string>
    <string name="msg_confirm_block">Block this user?</string>
    <string name="msg_confirm_unblock">Unblock this user?</string>
    <string name="msg_welcome">您好%s!\n 愿意跟随 @mustard 么？</string>
    <string name="title_welcome">欢迎！</string>
    <string name="welcome_label">欢迎 %s ！</string>
    <string name="title_bookmarks">书签</string>
    <string name="title_directmessages">Direct Messages</string>
    <string name="dm_in">Inbox</string>
    <string name="dm_out">Outbox</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="warning">警告</string>
    <string name="error">错误</string>
    <string name="error_no_oauth">"
很抱歉，%s 不支持 OAuth 。
请发送电邮至 mustard@macno.org
    "
    </string>
    <string name="identica">Identica</string>
    <string name="statusnet">Status Net</string>
    <string name="twitter">Twitter</string>
    <string name="oauth_wrong_consumer_key">获取私钥错误，请告知 mustard@macno.org</string>
	<string name="show">显示</string>
	<string name="hide">隐藏</string>
	<string name="shorturl">Short URL!</string>
	<string name="close">关闭</string>
    <string name="always_ask">一直询问</string>
    <string name="always_sent">发送而不再询问</string>
    <string name="username">账户</string>
    <string name="password">密码</string>
    <string name="instance">地址</string>
	<string name="label_force_ssl">强制使用 TLS/SSL</string>
    <string name="new_password">设置新密码</string>
	<string name="new_password_hint">请输入您的新密码</string>
	<string name="new_password_info">此功能用于更改密码</string>
    <string name="lbl_search">输入搜索关键词</string>
    <string name="lbl_search_type">搜索：</string>
	<string name="lbl_update_password">确认</string>
	<string name="lbl_update_avatar">更换头像</string>
	<string name="lbl_create_account">New account</string>
	<string name="lbl_oauth_login">OAuth login</string>
	<string name="lbl_account_login">Username login</string>
	<string name="btn_login">登入</string>
	<string name="btn_login_oauth">点击图片来使用 OAuth (如果可用！)</string>
    <string name="btn_search">查找</string>
    <string name="btn_squeeze">缩小</string>
    <string name="btn_test">测试！</string>
    <string name="btn_continue">继续</string>
    <string name="btn_filter_settings">Filter Settings</string>
    <string name="btn_clear_settings">Clear database and images</string>
    <string name="search_users">用户</string>
    <string name="search_groups">群组</string>
    <string name="search_notices">消息</string>
    <string name="search_tags">标签</string>
    <string name="wait_please">"Wait please"</string>
    <string name="done">Done!</string>
    <string name="user_following">Following: %s</string>
    <string name="user_follower">Followers: %s</string>
    <string name="user_dents">Dents: %s</string>
    <string name="user_since">Member since: %s</string>
    <string name="send_from_account">Send using:</string>
    <string name="info_no_dents">没有发现消息</string>
    <string name="restart_take_effect">更改密码后您需要重新登录。</string>
    <string name="to">To</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="warning_leave_group">您确定要离开 </string>
    <string name="new_dm">Compose</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
   	<string name="pref_multi_account_on_post">Choose account while posting?</string>
    <string name="error_fetch_dents">
    "
获取消息出错。请稍等后重试。"
    </string>
    <string name="error_fetch_more_dents">抱歉，该页面不支持更多功能..</string>
    <string name="error_group_not_found">抱歉，群组 %s 不存在</string>
    <string name="error_user_not_found">抱歉，用户 %s 不存在</string>
    <string name="error_no_user_from_status">无法从 API 获取用户</string>
    <string name="error_no_notice_from_status">无法从 API 获取消息</string>
    <string name="error_detecting_locaton">无法获取位置信息</string>
    <string name="no_locaton_provider">没有启用位置信息提供设备</string>
    <string name="error_duplicate_account">该账户已存在</string>
    <string name="error_invalid_url">地址不正确</string>
    <string name="error_help_test">网络异常，无法登陆！</string>
    <string name="error_no_response">没有回复</string>
    <string name="error_empty_response">空回复</string>
    <string name="error_wrong_userpass">错误的用户名或密码</string>
    <string name="error_instance_unkown_version">%1$s 似乎使用了古旧的 StatusNet，需要 %2$s</string>
    <string name="error_instance_too_old_version">版本 %1$s 太古老了。需要 %2$s</string>
	<string name="meeting_update_ok">会议发起成功</string>
	<string name="meeting_update_fail">会议发起失败</string>
	<string name="meeting_load_fail">详情加载失败，请检查网络！</string>
	<string name="meeting_endtime_early">会议结束时间早于开始时间，请修改</string>
	<string name="meeting_join_fail">提交失败</string>
	<string name="meeting_join_ok">提交成功</string>
	<string name="meeting_join_yes">参加</string>
	<string name="meeting_join_no">不参加</string>
	<string name="meeting_join_maybe">不确定</string>
	<string name="meeting_join_cancle">状态变更</string>
	<string name="meeting_title_not_empty">会议标题不能为空</string>
	<string name="meeting_location_not_empty">会议地点不能为空</string>
	<string name="meeting_content_not_empty">会议内容不能为空</string>
	<string name="meeting_year">年</string>
	<string name="meeting_month">月</string>
	<string name="meeting_day">日</string>
	<string name="question_update_ok">问题发送成功</string>
	<string name="question_update_fail">问题发送失败</string>
	<string name="question_title_not_empty">问题标题不能为空</string>
	<string name="question_content_not_empty">问题内容不能为空</string>
        <string name="my_best_answer">最佳答案</string>
	<string name="preferences_timeline">时链</string>
	<string name="pref_merge_timeline_title">Merge timelines</string>
	<string name="pref_merge_timeline_summary">Choose which accounts to merge into main timeline</string>
	<string name="pref_rows_fetch_default">25</string>
	<string name="pref_rows_fetch_title">获取的消息数</string>
	<string name="pref_rows_fetch_summary">该选项允许设定获取的消息数</string>
	<string name="pref_rows_fetch_dialog_title">消息数</string>
	<string name="preferences_notifications">提醒</string>
	<string name="pref_check_updates_title">启用提醒</string>
    <string name="pref_check_updates_summary">当程序未运行时查看是否有提到自己的消息</string>
    <string name="pref_check_updates_interval_title">更新查看间隔</string>
    <string name="pref_check_updates_interval_summary">查看间隔的时间</string>
    <string name="pref_check_updates_interval_dialog_title">间隔分钟数</string>
    <string name="pref_check_updates_interval_default">60</string>
    <string name="vibrate_title">Vibrate?</string>
    <string name="vibrate_summary">Vibrate the phone when new mentions arrive</string>
    <string name="pref_ringtone_title">Ringtone?</string>
    <string name="pref_ringtone_summary">Ringtone to use when new mentions arrive</string>
	<string name="preferences_geolocation">地理位置信息</string>
	<string name="pref_enable_geo_title">启用地理位置信息？</string>
    <string name="pref_enable_geo_summary">当发送消息时附加地理位置信息</string>
	<string name="pref_geo_fuzzy_title">精度</string>
	<string name="pref_geo_fuzzy_summary">精确到公里</string>
	<string name="pref_geo_fuzzy_dialog_title">半径(公里)</string>
	<string name="pref_geo_fuzzy_default">10</string>
	<string name="preferences_general">一般</string>
	<string name="pref_new_repeat_title">新的回推模式？</string>
    <string name="pref_new_repeat_summary">启用新的回推 API</string>
    <string name="pref_show_nick_reply_title">Include nickname in reply?</string>
    <string name="pref_show_nick_reply_summary">Include author nickname in replies</string>
	<string name="pref_refresh_after_post_title">发布后刷新？</string>
	<string name="pref_refresh_after_post_summary">如果启用，发布消息后将刷新时链</string>
	<string name="pref_auto_refresh_title">自动刷新时链？</string>
	<string name="pref_auto_refresh_summary">如果启用，时链将自动刷新</string>
	<string name="pref_spamreport_on_block">Report spammer after Block?</string>
	<string name="pref_spamreport_on_block_summary">If enabled, after blocking a user a spamreport is generated (only on identi.ca)</string>
	<string name="pref_auto_refresh_interval_default">60</string>
	<string name="preferences_optional">选项</string>
	<string name="pref_send_snapshot_title">启用快照</string>
    <string name="pref_send_snapshot_summary">您可以发送包含您使用账户数的匿名信息</string>
	<string name="preferences_layout">Layout (Restart mustard to take effect)</string>
	<string name="pref_new_button_title">Status Buttons?</string>
    <string name="pref_new_button_summary">Enable button to access status related functions (reply,repeat etc)</string>
	<string name="pref_bottom_buttons_title">Quick buttons</string>
    <string name="pref_bottom_buttons_summary">Enable onscreen buttons (compose, refresh, mentions)</string>
	<string name="pref_compact_view_title">Compact view</string>
    <string name="pref_compact_view_summary">Enable notice\'s compact view </string>
	<string name="pref_show_context_title">Show context link</string>
    <string name="pref_show_context_summary">Always show context link inline</string>
	<string name="pref_url_shortener_title">URL shortener</string>
    <string name="pref_url_shortener_summary">Choose the URL shortener</string>
	<string name="url_shortener">URL shortener</string>
	<string name="pref_theme_layout_title">Theme</string>
    <string name="pref_theme_layout_summary">Choose your preferred theme.</string>
	<string name="theme">Theme</string>
	<string name="theme_bw">White on Black</string>
    <string name="favourite">收藏</string>
    <string name="un_favourite">取消收藏</string>
    <string name="refresh">刷新</string>
     <string name="repost">转发</string>
     <string name="comments">评论</string>
     <string name="copy_to_clipboard">复制</string>
     <string name="delete">删除</string>
     <string name="share">分享</string>
    <string name="preferences_bg_random_appear_title">New note background color random</string>
</resources>