<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh_light"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_repost"
        android:icon="@drawable/repost_light"
        android:showAsAction="ifRoom"
        android:title="@string/repost"/>
    <item
        android:id="@+id/menu_comment"
        android:icon="@drawable/comment_light"
        android:showAsAction="ifRoom"
        android:title="@string/comments"/>
    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/fav_en_light"
        android:showAsAction="ifRoom"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/menu_unfav"
        android:icon="@drawable/fav_un_light"
        android:showAsAction="never"
        android:title="@string/un_favourite"/>
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/share_light"
        android:title="@string/share"/>
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/copy_light"
        android:showAsAction="never"
        android:title="@string/copy_to_clipboard"/>
    <item
        android:id="@+id/menu_delete"
        android:showAsAction="never"
        android:title="@string/delete"
        android:visible="false"/>

</menu>